# ml-stock-forward-return

./: .gitignore  README.md  pyproject.toml
models/: xgb_v1.json  xgb_v1_2026-05-01_995800c.json  xgb_v1_stability_pruned.json
picks/: picks_2026-03-26.csv  picks_2026-03-31.csv  picks_2026-04-30.csv  picks_2026-05-08.csv
reports/: backtest_equity.csv  backtest_stats.json  feature_importance.csv  feature_importance_seed1.csv  feature_importance_seed15.csv  feature_importance_seed17.csv  feature_importance_seed2.csv  feature_importance_seed3.csv  feature_importance_seed4.csv  feature_importance_seed5.csv  feature_importance_stability.csv  optuna_trials.csv  train_metrics.json
scripts/: altdata.py  backtest.py  data.py  dataset.py  deprecated_short_interest.py  earnings.py  evaluate.py  features.py  fundamentals.py  insider.py  labels.py  macro.py  run_all.py  strategy.py  today.py  train.py  universe.py
