[project]
name = "ml-stock-forward-return"
version = "0.1.0"
description = "ML-based S&P 500 ranker: predict 21d forward return per stock, long top decile."
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "ta>=0.11",
    "xgboost>=2.0",
    "optuna>=3.6",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "requests>=2.31",
    "tqdm>=4.66",
    "lxml>=5.0",
]

[tool.uv]
dev-dependencies = []
